[gd_scene load_steps=55 format=2]

[ext_resource path="res://sprites/Enemies/Abandoned Village/Death Skull/Death Skull Walk.png" type="Texture" id=1]
[ext_resource path="res://scripts/Death Skull.gd" type="Script" id=2]
[ext_resource path="res://sprites/Enemies/Abandoned Village/Death Skull/Death Skull Jump.png" type="Texture" id=3]
[ext_resource path="res://sprites/UIs/Enemy Life.png" type="Texture" id=4]
[ext_resource path="res://sprites/UIs/Enemy Life Contariner.png" type="Texture" id=5]
[ext_resource path="res://sprites/Enemies/Abandoned Village/Death Skull/Death Skull Attack.png" type="Texture" id=6]
[ext_resource path="res://sprites/Enemies/Abandoned Village/Death Skull/Death Skull Rest.png" type="Texture" id=7]
[ext_resource path="res://sprites/Enemies/Abandoned Village/Death Skull/Death Skull Hurt.png" type="Texture" id=8]
[ext_resource path="res://sprites/Enemies/Abandoned Village/Death Skull/Death Skull Dead.png" type="Texture" id=9]
[ext_resource path="res://sprites/Lighting/APfkB6p - Imgur.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 9 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 9 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 9 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 9 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 9 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 9 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 9 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 9 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 9 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 9 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=42]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "rest",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 41 ) ],
"loop": true,
"name": "damage",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 7.69919, 0.906832 )

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 7.90313, 1.08501 )

[node name="Death Skull" type="KinematicBody2D"]
z_index = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 42 )
frame = 4
playing = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.001

[node name="Rest Timer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Life Count" type="TextureProgress" parent="CanvasLayer"]
modulate = Color( 0.109804, 0.109804, 0.109804, 1 )
margin_left = 66.276
margin_top = 514.834
margin_right = 966.276
margin_bottom = 538.834
value = 100.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vunerable Area" type="Area2D" parent="."]
position = Vector2( 1.88775, 4.44961 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vunerable Area"]
position = Vector2( -0.10523, -17.362 )
shape = SubResource( 43 )
disabled = true

[node name="Attack Area" type="Area2D" parent="."]
position = Vector2( 1.88775, 4.38711 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack Area"]
position = Vector2( -0.103378, -17.371 )
shape = SubResource( 44 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -5.96863, -11.8935, -5.93654, 2.00758, -3.83192, 2.07774, -4.11254, 16.1085, 6.05978, 16.2488, 6.12993, 3.90174, 9.91824, 3.90174, 9.95585, -11.6832 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 0.159194, 0.159194 )
texture = ExtResource( 10 )
color = Color( 0.729412, 0, 0, 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Rest Timer" to="." method="_on_Rest_Timer_timeout"]
[connection signal="body_entered" from="Vunerable Area" to="." method="_on_Vunerable_Area_body_entered"]
[connection signal="body_entered" from="Attack Area" to="." method="_on_Attack_Area_body_entered"]
